--- a/app/src/main/res/layout/fragment_process_order.xml
+++ b/app/src/main/res/layout/fragment_process_order.xml
@@ -85,8 +85,9 @@
 
         <include
             android:id="@+id/screen"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             layout="@layout/screen_questionnaire" />
     </LinearLayout>
-
 
 </RelativeLayout>
