Role Based Access

--- a/app/src/main/res/layout/baby_list_item_view.xml
+++ b/app/src/main/res/layout/baby_list_item_view.xml
@@ -31,6 +31,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/app_baby_name"
+                    android:textAppearance="?attr/textAppearanceBody2"
                     android:textStyle="bold"
                     app:autoSizeTextType="uniform" />
 
@@ -39,15 +40,16 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/app_mother_name"
+                    android:textAppearance="?attr/textAppearanceBody2"
                     android:textStyle="bold"
                     app:autoSizeTextType="uniform" />
 
                 <TextView
 
                     android:layout_width="match_parent"
-
                     android:layout_height="wrap_content"
                     android:text="@string/app_ip_number"
+                    android:textAppearance="?attr/textAppearanceBody2"
                     android:textStyle="bold"
                     app:autoSizeTextType="uniform" />
             </LinearLayout>
@@ -60,22 +62,24 @@
                 android:padding="2dp">
 
                 <TextView
-
                     android:id="@+id/app_baby_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textAppearance="?attr/textAppearanceBody2"
                     app:autoSizeTextType="uniform" />
 
                 <TextView
                     android:id="@+id/app_mother_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textAppearance="?attr/textAppearanceBody2"
                     app:autoSizeTextType="uniform" />
 
                 <TextView
                     android:id="@+id/app_ip_number"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textAppearance="?attr/textAppearanceBody2"
                     app:autoSizeTextType="uniform" />
             </LinearLayout>
 
@@ -90,6 +94,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/app_birth_weight"
+                    android:textAppearance="?attr/textAppearanceBody2"
                     android:textStyle="bold"
                     app:autoSizeTextType="uniform" />
 
@@ -97,6 +102,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/app_status"
+                    android:textAppearance="?attr/textAppearanceBody2"
                     android:textStyle="bold"
                     app:autoSizeTextType="uniform" />
 
@@ -104,6 +110,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/app_rate_gain"
+                    android:textAppearance="?attr/textAppearanceBody2"
                     android:textStyle="bold"
                     app:autoSizeTextType="uniform" />
             </LinearLayout>
@@ -119,12 +126,14 @@
                     android:id="@+id/app_birth_weight"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textAppearance="?attr/textAppearanceBody2"
                     app:autoSizeTextType="uniform" />
 
                 <TextView
                     android:id="@+id/app_status"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textAppearance="?attr/textAppearanceBody2"
                     android:textColor="@color/dim_red"
                     app:autoSizeTextType="uniform" />
 
@@ -132,6 +141,7 @@
                     android:id="@+id/app_rate_gain"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textAppearance="?attr/textAppearanceBody2"
                     android:textColor="@color/dim_green"
                     app:autoSizeTextType="uniform" />
             </LinearLayout>
