--- a/app/src/main/res/layout/fragment_baby_dashboard.xml
+++ b/app/src/main/res/layout/fragment_baby_dashboard.xml
@@ -86,23 +86,23 @@
                             android:id="@+id/tv_current_weight"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
 
+                            android:textAppearance="?attr/textAppearanceBody2"
                             android:textSize="@dimen/_20sp" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/app_current_weight"
-                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption" />
+                            android:textAppearance="?attr/textAppearanceBody2" />
 
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:visibility="invisible"
                             android:layout_gravity="center_horizontal"
                             android:gravity="center_horizontal"
-                            android:orientation="horizontal">
+                            android:orientation="horizontal"
+                            android:visibility="invisible">
 
                             <ImageView
                                 android:layout_width="@dimen/_15dp"
@@ -114,7 +114,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="@string/action_percent"
-                                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
+                                android:textAppearance="?attr/textAppearanceBody2"
                                 android:textColor="@color/dim_green" />
 
 
@@ -125,6 +125,7 @@
                             android:layout_height="wrap_content"
                             android:text="@string/app_compared_weight"
                             android:textAlignment="center"
+                            android:visibility="gone"
                             android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption" />
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
@@ -147,7 +148,8 @@
                             android:id="@+id/tv_mother_milk"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
+
+                            android:textAppearance="?attr/textAppearanceBody2"
                             android:textSize="@dimen/_20sp" />
 
                         <TextView
@@ -155,7 +157,8 @@
                             android:layout_height="wrap_content"
                             android:text="@string/app_mothers_milk"
                             android:textAlignment="center"
-                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption" />
+
+                            android:textAppearance="?attr/textAppearanceBody2" />
 
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
@@ -222,23 +225,25 @@
                             android:id="@+id/tv_total_volume"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                             android:text="@string/app_zero_mls"
+
+                            android:textAppearance="?attr/textAppearanceBody2"
                             android:textSize="@dimen/_20sp" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/app_daily_feeds"
-                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption" />
+
+                            android:textAppearance="?attr/textAppearanceBody2"  />
 
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:visibility="invisible"
                             android:layout_gravity="center_horizontal"
                             android:gravity="center_horizontal"
-                            android:orientation="horizontal">
+                            android:orientation="horizontal"
+                            android:visibility="invisible">
 
                             <ImageView
                                 android:layout_width="@dimen/_15dp"
@@ -262,6 +267,7 @@
                             android:layout_height="wrap_content"
                             android:text="@string/app_compared_prescribed"
                             android:textAlignment="center"
+                            android:visibility="gone"
                             android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption" />
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
@@ -285,7 +291,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/app_zero"
-                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
+
+                            android:textAppearance="?attr/textAppearanceBody2"
                             android:textSize="@dimen/_20sp" />
 
                         <TextView
@@ -293,7 +300,8 @@
                             android:layout_height="wrap_content"
                             android:text="@string/app_expressions"
                             android:textAlignment="center"
-                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption" />
+
+                            android:textAppearance="?attr/textAppearanceBody2"  />
 
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
