--- a/app/src/main/res/layout/fragment_dhm_orders.xml
+++ b/app/src/main/res/layout/fragment_dhm_orders.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:visibility="invisible"
         android:weightSum="3">
 
         <androidx.appcompat.widget.SearchView
