--- a/app/src/main/res/layout/fragment_baby_lactation.xml
+++ b/app/src/main/res/layout/fragment_baby_lactation.xml
@@ -175,22 +175,24 @@
                                     android:id="@+id/tv_total_expressed"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
+
+                                    android:textAppearance="?attr/textAppearanceSubtitle1"
                                     android:textSize="@dimen/_20sp" />
 
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="@string/app_total_expressed"
-                                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption" />
+
+                                    android:textAppearance="?attr/textAppearanceBody2" />
 
                                 <LinearLayout
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="center_horizontal"
                                     android:gravity="center_horizontal"
-                                    android:visibility="invisible"
-                                    android:orientation="horizontal">
+                                    android:orientation="horizontal"
+                                    android:visibility="invisible">
 
                                     <ImageView
                                         android:layout_width="@dimen/_15dp"
