--- a/app/src/main/res/layout/fragment_child_dashboard.xml
+++ b/app/src/main/res/layout/fragment_child_dashboard.xml
@@ -399,6 +399,7 @@
                     android:layout_height="0dp"
                     android:text="@string/app_baby_dashboard"
                     android:textAlignment="center"
+                    android:textAppearance="?attr/textAppearanceBody2"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -463,6 +464,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:text="@string/app_assess"
+                    android:textAppearance="?attr/textAppearanceBody2"
                     android:textAlignment="center"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -531,6 +533,7 @@
                     android:layout_height="0dp"
                     android:text="@string/app_prescribe_feed"
                     android:textAlignment="center"
+                    android:textAppearance="?attr/textAppearanceBody2"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -595,6 +598,7 @@
                     android:layout_height="0dp"
                     android:text="@string/app_feeding"
                     android:textAlignment="center"
+                    android:textAppearance="?attr/textAppearanceBody2"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -661,6 +665,7 @@
                     android:layout_height="0dp"
                     android:text="@string/app_lactation_support"
                     android:textAlignment="center"
+                    android:textAppearance="?attr/textAppearanceBody2"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
