--- a/app/src/main/res/layout/prescription_list_item.xml
+++ b/app/src/main/res/layout/prescription_list_item.xml
@@ -34,7 +34,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
                     android:text="@string/app_date"
-                    android:textStyle="bold" />
+                    android:textAppearance="?attr/textAppearanceSubtitle1"
+                    android:textStyle="bold"  />
 
                 <TextView
                     android:id="@+id/app_date"
@@ -53,6 +54,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
                     android:text="@string/app_time"
+                    android:textAppearance="?attr/textAppearanceSubtitle1"
                     android:textStyle="bold" />
 
                 <TextView
@@ -72,6 +74,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
                     android:text="@string/app_total_feed_volume"
+                    android:textAppearance="?attr/textAppearanceSubtitle1"
                     android:textStyle="bold" />
 
                 <TextView
@@ -91,6 +94,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
                     android:text="@string/app_route"
+                    android:textAppearance="?attr/textAppearanceSubtitle1"
                     android:textStyle="bold" />
 
                 <TextView
@@ -110,6 +114,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
                     android:text="@string/app_frequency"
+                    android:textAppearance="?attr/textAppearanceSubtitle1"
                     android:textStyle="bold" />
 
                 <TextView
@@ -137,7 +142,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
                     android:text="@string/app_iv_fluids"
-                    android:textStyle="bold" />
+                    android:textAppearance="?attr/textAppearanceSubtitle1"
+                    android:textStyle="bold"  />
 
                 <TextView
                     android:id="@+id/app_iv_fluids"
@@ -156,6 +162,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
                     android:text="@string/app_breast_milk"
+                    android:textAppearance="?attr/textAppearanceSubtitle1"
                     android:textStyle="bold" />
 
                 <TextView
@@ -175,6 +182,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
                     android:text="@string/menu_dhm"
+                    android:textAppearance="?attr/textAppearanceSubtitle1"
                     android:textStyle="bold" />
 
                 <TextView
@@ -194,7 +202,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
                     android:text="@string/app_consent"
-                    android:textStyle="bold" />
+                    android:textAppearance="?attr/textAppearanceSubtitle1"
+                    android:textStyle="bold"  />
 
                 <TextView
                     android:id="@+id/app_consent"
@@ -213,6 +222,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
                     android:text="@string/app_consent_date"
+                    android:textAppearance="?attr/textAppearanceSubtitle1"
                     android:textStyle="bold" />
 
                 <TextView
@@ -233,7 +243,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="3dp"
                 android:text="@string/app_dhm_reason"
-                android:textStyle="bold" />
+                android:textAppearance="?attr/textAppearanceSubtitle1"
+                android:textStyle="bold"  />
 
             <TextView
                 android:id="@+id/app_dhm_reason"
@@ -249,6 +260,7 @@
             android:layout_marginTop="3dp"
             android:text="@string/app_additional"
             android:textColor="@color/dim_red"
+            android:textAppearance="?attr/textAppearanceSubtitle1"
             android:textStyle="bold" />
 
         <LinearLayout
@@ -269,6 +281,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
                     android:text="@string/app_additional"
+                    android:textAppearance="?attr/textAppearanceSubtitle1"
                     android:textStyle="bold" />
 
                 <TextView
@@ -288,6 +301,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
                     android:text="@string/app_feeding_supplements"
+                    android:textAppearance="?attr/textAppearanceSubtitle1"
                     android:textStyle="bold" />
 
                 <TextView
